--- a/index.html
+++ b/index.html
@@ -1,30 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Boostrap link-->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Phone Collection</title>
-    <!--css link-->
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Phone Hub</title>
+    <!-- bootstrap css -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <!--  css link  -->
     <link rel ="stylesheet" href="style.css">
-    <!--google font link-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!--goggle font link-->
+ <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@600&family=Lobster&family=Poppins:ital,wght@0,400;0,500;0,600;0,800;1,400&display=swap" rel="stylesheet">
-</head>
-
-<body>
-<section class="container">
-      <div class="w-auto my-4 mx-auto">
+  </head>
+  <body>
+    <section class="container">
+   <div class="w-auto my-4 mx-auto">
         <h2 class="text-center title">Phone Collection</h2>
-        <!--input part-->
-          <div class="input-group mb-3">
-  <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-  <button onclick= "searchVar()" class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
-</div>
- </section>
- 
-</body>
+        <!-- input section --->
+        <div class="input-group mb-3">
+          <input
+            type="text"
+            id="search-result"
+            class="form-control"
+            placeholder="Search your desidred phone"
+            aria-label="Search Phone"
+            aria-describedby="button-addon2"
+          />
+          <button
+            onclick="getApi()"
+            class="btn btn-outline-success "
+            type="button"
+            id="button-addon2"
+          >
+            Search
+          </button>
+        </div>
+      </div>
+      <!-- spinner  -->
+      <div class="d-flex justify-content-center">
+        <div id="spinner" class="spinner-border" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+      </div>
+      <div id="main">
+        <!-- phone detail  -->
+        <div id="productDetail">
+          <div id="details" class="mx-auto"></div>
+        </div>
+        <!-- show results  -->
+        <div>
+          <div id="container" class="row row-cols-1 row-cols-md-3 g-4"></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- bootstrap js  -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <!-- own js  -->
+    <script src="html.js"></script>
+  </body>
 </html>
+
