--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
       crossorigin="anonymous"
     />
     <!--  css link  -->
-    <link rel ="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <!--goggle font link-->
- <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@600&family=Lobster&family=Poppins:ital,wght@0,400;0,500;0,600;0,800;1,400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cabin:wght@600&family=Lobster&family=Poppins:ital,wght@0,400;0,500;0,600;0,800;1,400&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section class="container">
-   <div class="w-auto my-4 mx-auto">
+      <div class="w-auto my-4 mx-auto">
         <h2 class="text-center title">Phone Collection</h2>
         <!-- input section --->
         <div class="input-group mb-3">
@@ -34,8 +37,8 @@
             aria-describedby="button-addon2"
           />
           <button
-            onclick="getApi()"
-            class="btn btn-outline-success "
+            onclick="getPhone()"
+            class="btn btn-outline-success"
             type="button"
             id="button-addon2"
           >
@@ -68,7 +71,6 @@
       crossorigin="anonymous"
     ></script>
     <!-- own js  -->
-    <script src="html.js"></script>
+    <script src="phone.js"></script>
   </body>
 </html>
-
